# rust-products-api

./: .env  Cargo.toml  README.md
migration/src/: lib.rs  m20260323_042121_productos.rs
src/: config.rs  main.rs  state.rs
src/entities/: mod.rs  productos.rs
src/errors/: errors.rs
src/handlers/: mod.rs  product_handler.rs
src/models/: mod.rs  product_models.rs
src/routes/: product_routes.rs
