[package]
name = "api_productos"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
derive_more = { version = "2", features = ["display"] }